ensure no wrapping of main grid

--- a/to-publish/style.css
+++ b/to-publish/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 section#board {
-  /* width: 700px; */
+  min-width: 700px;
   flex: 1;
   margin: 10px;
 }
